--- a/42_Cub3D/Makefile
+++ b/42_Cub3D/Makefile
@@ -6,7 +6,7 @@
 #    By: jaqribei <jaqribei@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/07/10 18:21:52 by jaqribei          #+#    #+#              #
-#    Updated: 2024/07/14 18:53:36 by jaqribei         ###   ########.fr        #
+#    Updated: 2024/07/15 00:13:11 by jaqribei         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,7 +17,7 @@ NAME = cub3D
 #******************************************************************************#
 
 CC = cc
-FLAGS = -g3 -Wall -Wextra -Werror
+FLAGS = -g3 -Wall -Wextra -Werror #-fsanitize=address
 
 #******************************************************************************#
 #									PATH									   #
